--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -23,7 +23,7 @@ jobs:
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl docker registry login --expiry-seconds 600
+        run: docker login registry.iactorling.pl --expiry-seconds 600
 
       - name: Push image to DigitalOcean Container Registry
         run: docker push registry.iactorling.pl/asb/static-example
