--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -15,21 +15,18 @@ jobs:
         run: echo $GITHUB_SHA > $GITHUB_WORKSPACE/site/_meta
 
       - name: Build container image
-        run: docker build -t registry.digitalocean.com/asb/static-example:$(echo $GITHUB_SHA | head -c7) .
+        run: docker build -t registry.iactorling.pl/asb/static-example:$(echo $GITHUB_SHA | head -c7) .
 
       - name: Install doctl
         uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-
-      - name: Log in to DigitalOcean Container Registry with short-lived credentials
-        run: doctl registry login --expiry-seconds 600
+          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }
 
       - name: Push image to DigitalOcean Container Registry
-        run: docker push registry.digitalocean.com/asb/static-example
+        run: docker push registry.iactorling.pl/asb/static-example
 
       - name: Update deployment file
-        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.digitalocean.com/asb/static-example:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
+        run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.iactorling.pl/asb/static-example:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
 
       - name: Save DigitalOcean kubeconfig
         run: doctl kubernetes cluster kubeconfig save actions-example-k8s-1-16
