--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -31,8 +31,8 @@ jobs:
       - name: Update deployment file
         run: TAG=$(echo $GITHUB_SHA | head -c7) && sed -i 's|<IMAGE>|registry.iactorling.pl/asb/static-example:'${TAG}'|' $GITHUB_WORKSPACE/config/deployment.yml
 
-      - name: Save DigitalOcean kubeconfig
-        run: doctl kubernetes cluster kubeconfig save actions-example-k8s-1-16
+      - name: Save DigitalOcean iactorling
+        run: doctl kubernetes cluster iactorling save actions-example-k8s-1-16
 
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
