--- a/config/deployment.yml
+++ b/config/deployment.yml
@@ -1,51 +1,32 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: static-example
-  labels:
-    app: static-example
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: static-example
-  strategy:
-    rollingUpdate:
-      maxSurge: 1
-      maxUnavailable: 1
-  minReadySeconds: 5
-  template:
-    metadata:
-      labels:
-        app: static-example
-    spec:
-      containers:
-      - name: static-example
-        image: <IMAGE>
-        ports:
-        - containerPort: 5000
-        resources:
-          requests:
-            cpu: 100m
-          limits:
-            cpu: 100m
-      imagePullSecrets:
-      - name: registry-asb
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: static-example-service
-  annotations:
-    external-dns.alpha.kubernetes.io/hostname: "doctl-action.do-api.dev"
-    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "14cf21de-04d0-4241-8b3e-9b79575a3d09"
-    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
+  name: echo1
 spec:
-  type: LoadBalancer
   ports:
-    - name: https
-      protocol: TCP
-      port: 443
-      targetPort: 5000
+    - port: 80
+      targetPort: 5678
   selector:
-    app: static-example
+    app: echo1
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: echo1
+spec:
+  selector:
+    matchLabels:
+      app: echo1
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: echo1
+    spec:
+      containers:
+        - name: echo1
+          image: hashicorp/http-echo
+          args:
+            - "-text=echo1"
+          ports:
+            - containerPort: 5678
