--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -34,10 +34,14 @@ jobs:
       - name: Save DigitalOcean iactorling
         run: doctl kubernetes cluster iactorling save actions-example-k8s-1-16
 
-      - name: Update kubernetes keys
+      - name: Update kubernetes keys 1
         run: mkdir -p $HOME/.kube
-          sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
-          sudo chown $(id -u):$(id -g) $HOME/.kube/config
+
+      - name: Update kubernetes keys 2
+        run: sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+
+      - name: Update kubernetes keys 3
+        run: sudo chown $(id -u):$(id -g) $HOME/.kube/config
 
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
