--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -38,7 +38,7 @@ jobs:
         run: echo $GITHUB_WORKSPACE
         
       - name: heck the patch
-        run:  kubectl  version
+        run:  kubeadm init
 
       - name: Deploy to DigitalOcean Kubernetes
         run: kubectl apply -f $GITHUB_WORKSPACE/config/deployment.yml
