--- a/config/deployment/deployment.yml
+++ b/config/deployment/deployment.yml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: echo1
+  name: backend
 spec:
   selector:
     matchLabels:
-      app: echo1
+      app: backend
   replicas: 2
   template:
     metadata:
       labels:
-        app: echo1
+        app: backend
     spec:
       containers:
-        - name: echo1
+        - name: backend
           image: hashicorp/http-echo
           args:
-            - "-text=echo1-from-deployments-test-working"
+            - "-text=backend-from-deployments-test-working"
           ports:
             - containerPort: 5678
