--- a/config/ingress/main_ingrees.yaml
+++ b/config/ingress/main_ingrees.yaml
@@ -9,7 +9,7 @@ spec:
   tls:
     - hosts:
         - iactorling.pl
-      secretName: api-tls
+      secretName: main-tls
   rules:
     - host: iactorling.pl
       http:
